Fixed jumping when opening popup

--- a/index.css
+++ b/index.css
@@ -93,9 +93,10 @@ html:has(.nav_opened) {
 }
 
 .no-scroll {
-  overflow: hidden;
   position: relative;
   height: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .container {
@@ -698,6 +699,7 @@ html:has(.nav_opened) {
 
 .request-item__title {
   position: relative;
+  font-size: 20px;
   padding-left: 60px;
   margin: 0 0 10px;
   min-height: 50px;
